Added TODOs and comments for updating templates
Also added preliminary form_object.yml.j2 template

--- a/webdriver_test_tools/project/templates/templates/page_object/base_page.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/base_page.py.j2
@@ -1,3 +1,4 @@
+{% block standard_library_imports %}{% endblock %}
 from selenium.webdriver.common.by import By
 from webdriver_test_tools.pageobject import *
 from webdriver_test_tools.webdriver import actions, locate
