--- a/webdriver_test_tools/project/templates/templates/page_object/form_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/form_object.yml.j2
@@ -1,4 +1,4 @@
-{# TODO: re-organize form templates, add helpful comments, add explanation of syntax and/or link to docs #}
+{# TODO: add helpful comments, add explanation of syntax and/or link to docs #}
 # REPLACE <PLACEHOLDER VALUES> BELOW AND ADD ITEMS TO THE inputs LIST:
 
 form:
