Fixed some docstring syntax and built html

--- a/webdriver_test_tools/project/templates/templates/page_object/form_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/form_object.yml.j2
@@ -1,4 +1,6 @@
-{# TODO: add helpful comments, add explanation of syntax and/or link to docs #}
+# FormObject YAML Documentation: 
+# https://connordelacruz.com/webdriver-test-tools/yaml.html#formobjects
+
 # REPLACE <PLACEHOLDER VALUES> BELOW AND ADD ITEMS TO THE inputs LIST:
 
 form:
