--- a/webdriver_test_tools/project/templates/templates/page_object/form_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/form_object.py.j2
@@ -1,16 +1,9 @@
-{% extends "base_page.py.j2" %}
-
-{% block standard_library_imports %}
-import os
-
-{% endblock %}
+{% extends "yaml_page.py.j2" %}
 
 {% block parent_class %}prototypes.FormObject{% endblock %}
 
 {% block additional_attributes %}
-    # Path to YAML file representing the form object
-    YAML_FILE = os.path.join(os.path.dirname(__file__), '{{module_name}}.yml')
-
+{{super()}}
     # SET THE FOLLOWING ATTRIBUTES TO USE IN FormObject METHODS
 
     # (Optional) Page object of the modal/webpage/etc that should appear on
