Updated YAML parsing to handle relative_to url stuff
- Added attribute SITE_CONFIG, which is given the project's SiteConfig
class used to process 'relative_to' key in 'url' dict
- Added helper methods _parse_url_dict() and _get_base_url()
- Updated template to include SITE_CONFIG attribute

--- a/webdriver_test_tools/project/templates/templates/page_object/web_page_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/web_page_object.py.j2
@@ -8,10 +8,14 @@ from {{test_package}}.config import SiteConfig
 {% block parent_class %}prototypes.WebPageObject{% endblock %}
 
 {% block additional_attributes %}
+    # Used for internal WebPageObject methods (do not modify)
+    SITE_CONFIG = SiteConfig
+
+    # TODO: UPDATE FOR YAML
     # File name of the page relative to a base URL declared in SiteConfig
     PAGE_FILENAME = ''
     # Full URL of the page. E.g.:
-    # PAGE_URL = SiteConfig.BASE_URL + PAGE_FILENAME
-    PAGE_URL = SiteConfig.BASE_URL + PAGE_FILENAME
+    # PAGE_URL = SITE_CONFIG.BASE_URL + PAGE_FILENAME
+    PAGE_URL = SITE_CONFIG.BASE_URL + PAGE_FILENAME
 {% endblock %}
 
