--- a/webdriver_test_tools/project/templates/templates/page_object/web_page_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/web_page_object.py.j2
@@ -1,4 +1,4 @@
-{% extends "base_page.py.j2" %}
+{% extends "yaml_page.py.j2" %}
 
 {% block additional_imports %}
 
@@ -8,14 +8,8 @@ from {{test_package}}.config import SiteConfig
 {% block parent_class %}prototypes.WebPageObject{% endblock %}
 
 {% block additional_attributes %}
+{{super()}}
     # Used for internal WebPageObject methods (do not modify)
     SITE_CONFIG = SiteConfig
-
-    # TODO: UPDATE FOR YAML
-    # File name of the page relative to a base URL declared in SiteConfig
-    PAGE_FILENAME = ''
-    # Full URL of the page. E.g.:
-    # PAGE_URL = SITE_CONFIG.BASE_URL + PAGE_FILENAME
-    PAGE_URL = SITE_CONFIG.BASE_URL + PAGE_FILENAME
 {% endblock %}
 
