--- a/webdriver_test_tools/project/templates/templates/page_object/modal_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/modal_object.py.j2
@@ -1,11 +1,18 @@
-{% extends "yaml_page.py.j2" %}
+{% if use_yaml %}{% extends "yaml_page.py.j2" %}{% else %}{% extends "base_page.py.j2" %}{% endif %}
 
 {% block parent_class %}prototypes.ModalObject{% endblock %}
 
 {% block additional_attributes %}
-{{super()}}
+{% if use_yaml %}{{super()}}
+{% endif %}
     # SET THE FOLLOWING ATTRIBUTES TO USE IN ModalObject METHODS
 
+{% if not use_yaml %}
+    # REQUIRED: Locator for the modal element
+    MODAL_LOCATOR = None
+    # REQUIRED: Locator for the modal's close button
+    CLOSE_LOCATOR = None
+{% endif %}
     # (Optional) Page object of the contents of the modal body. If set to a
     # subclass of BasePage, the get_modal_body() method will return an instance
     # of the page object
