--- a/webdriver_test_tools/project/templates/config/__init__.py.j2
+++ b/webdriver_test_tools/project/templates/config/__init__.py.j2
@@ -3,4 +3,5 @@ from .test import TestSuiteConfig
 from .webdriver import WebDriverConfig
 from .browser import BrowserConfig
 from .browserstack import BrowserStackConfig
+from .projectfiles import ProjectFilesConfig
 
