Added link to YAML docs in template INPUT_DICTS documentation

--- a/webdriver_test_tools/project/templates/templates/page_object/form_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/form_object.py.j2
@@ -15,7 +15,8 @@
 
     # REQUIRED: List of input dictionaries. These will be used to initialize
     # InputObjects at run time.
-    # TODO: link to YAML docs for format
+    # Dictionaries use same keys as YAML inputs. For syntax, see:
+    # https://connordelacruz.com/webdriver-test-tools/yaml.html#yaml-inputs
     INPUT_DICTS = []
 
 {% endif %}
