Updated collapsible nav templates for YAML support

--- a/webdriver_test_tools/project/templates/templates/page_object/nav_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/nav_object.py.j2
@@ -14,7 +14,7 @@ from {{test_package}}.config import SiteConfig
     SITE_CONFIG = SiteConfig
 
 {% if not use_yaml %}
-    # SET THE FOLLOWING ATTRIBUTES TO USE IN {% block nav_class_prefix %}{% endblock %}NavObject METHODS
+    # SET THE FOLLOWING ATTRIBUTES TO USE IN NavObject METHODS
 
     # REQUIRED: List of link dictionaries. These will be used to initialize
     # NavLinkObject instances at runtime.
