--- a/webdriver_test_tools/project/templates/templates/page_object/nav_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/nav_object.yml.j2
@@ -8,6 +8,8 @@ nav:
   # (Default: true) Whether the navbar is fixed to the window.
   # Uncomment to override
   # fixed: false
+  {% block nav_additional_attributes %}
+  {% endblock %}
   # List of links in the navbar
   links:
     # Example syntax:
