Added tests for collapsible nav

--- a/test/html/res/css/navbar.css
+++ b/test/html/res/css/navbar.css
@@ -3,4 +3,7 @@
 .hover-dropdown:hover .dropdown-menu {
     display: block;
 }
-
+.collapsing {
+    /* Fix false positives caused by animations */
+    transition: height .05s ease;
+}
