Added test for no-yaml navs

--- a/webdriver_test_tools/project/templates/templates/page_object/nav_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/nav_object.py.j2
@@ -28,7 +28,7 @@ from {{test_package}}.config import SiteConfig
     # (Default = True) True if element is a fixed navbar, False otherwise. If
     # set to False, click_page_link() and hover_over_page_link() will scroll
     # the target link into view before interacting with it
-    # FIXED = True
+    # FIXED = False
 {% endif %}
 {% endblock %}
 
