Added tests for non-yaml collapsible navs and fixed some bugs
- Added missing COLLAPSIBLE attribute to non-YAML collapsible nav
template
- no_yaml_init() now sets COLLAPSE_BUTTON_LOCATOR to match
EXPAND_BUTTON_LOCATOR if not set

--- a/webdriver_test_tools/project/templates/templates/page_object/collapsible_nav_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/collapsible_nav_object.py.j2
@@ -1,6 +1,8 @@
 {% extends "nav_object.py.j2" %}
 
 {% block nav_additional_attributes %}
+    # (Default: False) Whether or not the navbar is collapsible
+    COLLAPSIBLE = True
     # REQUIRED: Locator for the collapsible menu element
     MENU_LOCATOR = None
     # REQUIRED: Locator for the button that expands the nav menu
