--- a/webdriver_test_tools/project/templates/templates/page_object/modal_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/modal_object.yml.j2
@@ -3,14 +3,13 @@
 
 # REPLACE <PLACEHOLDER VALUES> BELOW:
 
-
 modal:
   # REQUIRED: Locator for the modal
   modal_locator:
-    by: <LOCATE BY>
-    locator: <LOCATOR STRING>
+    by: <BY>
+    locator: <LOCATOR>
   # REQUIRED: Locator for the close button
   close_locator:
-    by: <LOCATE BY>
-    locator: <LOCATOR STRING>
+    by: <BY>
+    locator: <LOCATOR>
 
