--- a/webdriver_test_tools/project/templates/templates/page_object/nav_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/nav_object.yml.j2
@@ -3,14 +3,15 @@
 
 # REPLACE <PLACEHOLDER VALUES> BELOW AND ADD ITEMS TO THE links LIST:
 
-
 nav:
-  # (Default: true) Whether the navbar is fixed to the window.
-  # Uncomment to override
+  # NAV ATTRIBUTES -------------------------------------------------------------
+  # (Default: true) Whether the navbar is fixed to the window. Uncomment to
+  # override
   # fixed: false
   {% block nav_additional_attributes %}
   {% endblock %}
-  # List of links in the navbar
+  # NAV LINKS ------------------------------------------------------------------
+  # REQUIRED: List of links in the navbar
   links:
     # Example syntax:
     #
