--- a/webdriver_test_tools/project/templates/templates/page_object/web_page_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/web_page_object.yml.j2
@@ -4,7 +4,7 @@
 # SET url KEY BELOW:
 
 web_page:
-  # REQIRED: URL to the page. The following formats are accepted:
+  # REQUIRED: URL to the page. The following formats are accepted:
   # 
   # # Full URL to the page
   # url: http://example.com/
@@ -12,7 +12,7 @@ web_page:
   # url:
   #   # Page path, relative to the SiteConfig attribute specified below
   #   path: path/to/page.html
-  #   # A valid attribute in project SiteConfig to use as the base URL for the page
+  #   # Attribute in project SiteConfig to use as the base URL for the page
   #   relative_to: BASE_URL
-  url:
+  url: 
 
