--- a/webdriver_test_tools/project/templates/templates/page_object/form_object.yml.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/form_object.yml.j2
@@ -4,15 +4,17 @@
 # REPLACE <PLACEHOLDER VALUES> BELOW AND ADD ITEMS TO THE inputs LIST:
 
 form:
+  # FORM ATTRIBUTES ------------------------------------------------------------
   # REQUIRED: Locator for the form
   form_locator:
-    by: <LOCATE BY>
-    locator: <LOCATOR STRING>
+    by: <BY>
+    locator: <LOCATOR>
   # REQUIRED: Locator for the submit button
   submit_locator:
-    by: <LOCATE BY>
-    locator: <LOCATOR STRING>
-  # List of inputs in the form
+    by: <BY>
+    locator: <LOCATOR>
+  # FORM INPUTS ----------------------------------------------------------------
+  # REQUIRED: List of inputs in the form
   inputs:
     # Example syntax:
     # 
