--- a/webdriver_test_tools/project/templates/package_root/__main__.py.j2
+++ b/webdriver_test_tools/project/templates/package_root/__main__.py.j2
@@ -3,6 +3,8 @@
 from webdriver_test_tools.project import test_module
 from {{test_package}} import config, tests
 
+def main():
+    test_module.main(tests, config, __package__)
 
 if __name__ == '__main__':
-    test_module.main(tests, config, __package__)
+    main()
