Added documentation for new attributes and updated config template

--- a/webdriver_test_tools/project/templates/config/webdriver.py.j2
+++ b/webdriver_test_tools/project/templates/config/webdriver.py.j2
@@ -23,6 +23,14 @@ class WebDriverConfig(config.WebDriverConfig):
 
     # UNCOMMENT TO OVERRIDE DEFAULT CONFIGURATIONS
 
+    # WebDriverTestCase Configurations
+
+    # (Default: 10) Default number of seconds for WebDriverTestCase assertion
+    # methods to wait for expected conditions to occur before test fails
+    # https://connordelacruz.com/webdriver-test-tools/webdriver_test_tools.testcase.webdriver.html#assertion-methods
+    # DEFAULT_ASSERTION_TIMEOUT = 10
+
+
     # Browser Driver Initialization Arguments
     #
     # NOTE: Logging configurations are set when the corresponding
