--- a/webdriver_test_tools/project/templates/config/webdriver.py.j2
+++ b/webdriver_test_tools/project/templates/config/webdriver.py.j2
@@ -20,6 +20,19 @@ class WebDriverConfig(config.WebDriverConfig):
     # in the webdriver_test_tools package root directory if unspecified
     SCREENSHOT_PATH = os.path.join(_PACKAGE_ROOT, 'screenshot')
 
+    # (Default: '{date}/{time}-{test}-{browser}.png') Format string used to
+    # determine filenames for screenshots (relative to SCREENSHOT_PATH). The
+    # format string can include the following parameters:
+    #
+    # {date}: Replaced with the date the screenshot was taken (YYYY-MM-DD)
+    # {time}: Replaced with the time the screenshot was taken (HHMM)
+    # {test}: Replaced with the test method running when screenshot was taken
+    # {browser}: Replaced with the browser used when screenshot was taken
+    #
+    # The format string can include '/' directory separators to save
+    # screenshots in subdirectories of SCREENSHOT_PATH.
+    SCREENSHOT_FILENAME_FORMAT = '{date}/{time}-{test}-{browser}.png'
+
 
     # UNCOMMENT TO OVERRIDE DEFAULT CONFIGURATIONS
 
