Added WebDriverTestCase.takeScreenshot() method and updated time fmt
- Added WebDriverTestCase.takeScreenshot(), which takes a screenshot
using the related configurations for the file path
- Added seconds to the screenshot time string to avoid conflicting
filenames

--- a/webdriver_test_tools/project/templates/config/webdriver.py.j2
+++ b/webdriver_test_tools/project/templates/config/webdriver.py.j2
@@ -25,7 +25,7 @@ class WebDriverConfig(config.WebDriverConfig):
     # format string can include the following parameters:
     #
     # {date}: Replaced with the date the screenshot was taken (YYYY-MM-DD)
-    # {time}: Replaced with the time the screenshot was taken (HHMM)
+    # {time}: Replaced with the time the screenshot was taken (HHMMSS)
     # {test}: Replaced with the test method running when screenshot was taken
     # {browser}: Replaced with the browser used when screenshot was taken
     #
